# gflow-plugin

./: .gitignore  README.md  pyproject.toml
plugin/gflow/: README.txt  __init__.py  gflow.py  metadata.txt
plugin/gflow/core/: extractor.py  formatting.py  geopackage.py  layer_styling.py  memory_layer.py  processing.py  read_gflow.py  schemata.py  task.py
plugin/gflow/core/elements/: __init__.py  aquifer.py  barrier.py  closed_barrier.py  domain.py  element.py  flux_inspector.py  head_line_sink.py  headwell.py  inhomogeneity.py  observation.py  particle.py  piezometer.py  schemata.py  uniform_flow.py  well.py
plugin/gflow/core/elements/linesinks/: discharge.py  drain.py  farfield.py  gallery.py  head.py  lake.py
plugin/gflow/core/extract/: __init__.py  doublets.py  extraction_base.py  flux_inspection.py  linesinks.py  parser.py  test_point.py  wells.py
plugin/gflow/widgets/: compute_widget.py  config_dialog.py  dataset_widget.py  elements_widget.py  gflow_widget.py
scripts/: package.py
